--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,11 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+
+  box-sizing: border-box;
+}
+
 body {
+  width: 100vw;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Helvetica', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
